// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Time /> should render the component with seconds 1`] = `
<Fragment>
  10:00:00
</Fragment>
`;

exports[`<Time /> should render the component without seconds 1`] = `
<Fragment>
  10:00
</Fragment>
`;
